@@ -1,3 +1,8 @@
+2013-11-21         Hiroshi Saito	<hiroshi@winpg.jp>
+
+	* Makefile.am: Add pdf.c
+	* pdf.c, (ext_version): Add version
+
 2013-09-08         Hiroshi Saito	<hiroshi@winpg.jp>
 
 	* gd.c (do_gdImageStringFTCircle): Added new function to call
